--- a/src/app/components/streamline/streamline.component.html
+++ b/src/app/components/streamline/streamline.component.html
@@ -74,7 +74,7 @@
     </div>
 
     <!-- Features -->
-    <div
+    <!-- <div
       class="mt-12 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 text-center"
     >
       <div>
@@ -116,7 +116,7 @@
           engaging, and buying.
         </p>
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
 
