made a new change

--- a/src/app/page/about/about.component.html
+++ b/src/app/page/about/about.component.html
@@ -94,7 +94,7 @@
           </div>
         </div>
       </div> -->
-    <div class="md:w-1/2 w-full overflow-hidden">
+      <div class="md:w-1/2 w-full overflow-hidden">
         <div
           class="image-train-container relative h-[360px] sm:h-[420px] md:h-[480px] overflow-hidden"
         >
@@ -202,28 +202,28 @@
           <div class="bg-[#1e1e1e] p-4 rounded-lg shadow hover:shadow-lg">
             <h3 class="text-lg font-bold flex items-center gap-2">
               <i class="fas fa-code text-yellow-400"></i>
-              Public Speaking
+              Portrait Photography/ Personal Branding
             </h3>
             <p class="text-sm text-gray-400 mt-2">
-              I speak on marketing, tech, multi-entrepreneurship, personal
-              branding, motherhood and resilience—sharing insight-rich,
-              story-driven talks that spark action and connection.
+              I help businesses and entrepreneurs capture compelling story-led
+              visuals that not only showcase their brand but also define their
+              voice, connect emotionally with their audience, and build lasting
+              trust both online and offline.
             </p>
           </div>
           <div class="bg-[#1e1e1e] p-4 rounded-lg shadow hover:shadow-lg">
             <h3 class="text-lg font-bold flex items-center gap-2">
               <i class="fas fa-mobile-alt text-yellow-400"></i>
-              Brand Consultancy & Promotions
+              ⁠Storytelling Content Creation & Marketing
             </h3>
             <p class="text-sm text-gray-400 mt-2">
-              I help you uncover, refine, and elevate your brand’s voice,
-              visuals, and vibe—so you can show up with confidence, consistency,
-              and clarity. Whether you're starting from scratch or rebranding
-              for growth, you'll walk away with direction, distinction, and a
-              brand that truly connects with your audience.
+              From visuals to voice, I create content that brings your brand to
+              life. Using a strategic storytelling approach, I help you
+              communicate your message clearly, creatively, and consistently so
+              your audience isn’t just scrolling.
             </p>
           </div>
-          <div class="bg-[#1e1e1e] p-4 rounded-lg shadow hover:shadow-lg">
+          <!-- <div class="bg-[#1e1e1e] p-4 rounded-lg shadow hover:shadow-lg">
             <h3 class="text-lg font-bold flex items-center gap-2">
               <i class="fas fa-camera text-yellow-400"></i>
               Business Consultancy & Coaching
@@ -237,7 +237,7 @@
               actionable insights, fresh perspective, and empowering guidance
               that drives real results.
             </p>
-          </div>
+          </div> -->
         </div>
 
         <div class="flex justify-center items-center mt-5">
