--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="fixed z-50 w-full">
   <div class="md:px-14">
-    <nav class="bg-oryo lg:rounded-3xl">
+    <nav class="bg-[#9a7aa4] lg:rounded-3xl">
       <div class="me-auto px-4 sm:px-6 lg:px-8">
         <div class="flex items-center justify-between h-16 joto">
           <div class="flex justify-between items-center joto">
