--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -1,5 +1,5 @@
 
-<section class="py-20 px-4 bg-gradient-to-r from-[#ffbd59] to-[#F8FAFC] text-white p-6 text-center relative">
+<section class="py-20 px-4 bg-gradient-to-r from-[#c86635] to-[#F8FAFC] text-white p-6 text-center relative">
   <div class="gradent-left w-fit h-fit md:h-[500px] md:w-[500px]"></div>
   <div class="gradent-right absolute w-fit h-fit md:h-[454px] md:w-[440px]"></div>
   <div class="max-w-4xl mx-auto text-center mb-10">
