--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@
 }
 
 .button-overlay {
-  background-color: #242528;
+  background-color: #c86635;
   border: 1px #000;
   border-radius: 100%;
   width: 125%;
@@ -42,7 +42,7 @@
   /* z-index: -9; */
   border-radius: 367px;
   opacity: 0.1;
-  background: #e85427;
+  background: #6c2346;
   filter: blur(100px);
   /* flex-shrink: 0; */
 }
@@ -57,7 +57,7 @@
   right: 0px;
   /* z-index: -9; */
   border-radius: 367px;
-  background: #e85427;
+  background: #6c2346;
   filter: blur(100px);
   /* flex-shrink: 0; */
 }
@@ -65,7 +65,7 @@
   position: absolute;
   /* z-index: -9; */
   border-radius: 367px;
-  background: #e85427;
+  background: #6c2346;
   filter: blur(100px);
   /* flex-shrink: 0; */
 }
@@ -75,7 +75,7 @@
   right: 0vh;
   /* z-index: -9; */
   opacity: 0.3;
-  background: #e85427;
+  background: #6c2346;
   filter: blur(100px);
   /* flex-shrink: 0; */
 }
@@ -86,7 +86,7 @@
   left: 0vh;
   /* z-index: -9; */
   opacity: 0.3;
-  background: #54be96;
+  background: #c86635;
   filter: blur(200px);
   width: 80%;
   height: 136%;
