--- a/src/app/components/coming-soon/coming-soon.component.html
+++ b/src/app/components/coming-soon/coming-soon.component.html
@@ -26,7 +26,7 @@
       We are creating <br />
       something amazing
     </h1>
-    <p class="text-lg text-gray-600">We will launch our website soon!</p>
+    <p class="text-lg text-gray-600">We will launch our {{type()}} soon!</p>
   </div>
   <button [routerLink]="['/']" routerLinkActive="router-link-active"  class="w-fit bg-yellow-400 text-slate-900 px-4 py-3 rounded-lg font-semibold hover:bg-yellow-300 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:ring-offset-2 focus:ring-offset-slate-900 transition-all duration-200 transform hover:scale-[1.02]">
     Return to Home
