--- a/src/app/page/index/index.component.html
+++ b/src/app/page/index/index.component.html
@@ -1,4 +1,4 @@
-<div class="bg-[#121212] min-h-screen">
+<div class="bg-white min-h-screen">
   <!-- NAVIGATION -->
   <app-header></app-header>
   <!-- HEADER -->
@@ -12,25 +12,25 @@
       <!-- Text Content -->
       <div class="text-center md:text-left md:w-1/2 pt-6 md:pt-0">
         <div
-          class="border border-[#e85427] text-white px-4 py-2 inline-block mb-4 text-sm md:text-base rounded-md"
+          class="border border-[#e85427] text-black px-4 py-2 inline-block mb-4 text-sm md:text-base rounded-md"
         >
           Hello there!
         </div>
-        <h1 class="text-3xl md:text-5xl font-bold text-white mb-4">
+        <h1 class="text-3xl md:text-5xl font-bold text-black mb-4">
           I'm SÍMBÍÀTÚÚ,
           <p>
             <app-animated-typing
               [phrases]="[
-                'a content marketer',
+                'a Portrait Photographer',
                 'a full-stack marketer',
                 'a multi-entrepreneur',
-                'a business builder'
+                'a Personal Brander'
               ]"
             />
           </p>
         </h1>
         <p
-          class="text-white mb-6 max-w-md mx-auto md:mx-0 text-sm md:text-base"
+          class="text-black mb-6 max-w-md mx-auto md:mx-0 text-sm md:text-base"
         >
           Based in the UK. I support SMEs across various sectors, including
           health, wellness, tech, lifestyle, hospitality, non-profits, and real
