--- a/src/app/page/about/about.component.html
+++ b/src/app/page/about/about.component.html
@@ -1,8 +1,8 @@
-<div class="min-h-screen bg-[#0f0f0f] text-white font-sans">
+<div class="min-h-screen bg-white text-white font-sans">
   <!-- NAVIGATION -->
   <app-header></app-header>
 
-  <header class="h-auto md:h-[90vh] flex items-center bg-black relative">
+  <header class="h-auto md:h-[90vh] flex items-center bg-white relative">
     <div
       class="gradent bottom-0 left-0 opacity-10 w-[300px] h-[300px] md:h-[500px] md:w-[500px]"
     ></div>
@@ -12,12 +12,12 @@
       <!-- Text Content -->
       <div class="text-center md:text-left md:w-1/2 pt-6 md:pt-0">
         <h1
-          class="text-4xl sm:text-5xl lg:text-6xl font-bold text-white mb-4 leading-tight"
+          class="text-4xl sm:text-5xl lg:text-6xl font-bold text-[#0f0f0f] mb-4 leading-tight"
         >
           Branding That Drives Results
         </h1>
         <p
-          class="text-white mb-6 max-w-md mx-auto md:mx-0 text-sm sm:text-base"
+          class="text-[#0f0f0f] mb-6 max-w-md mx-auto md:mx-0 text-sm sm:text-base"
         >
           We turn ideas into revenue through design, strategy, and creative
           collaboration.
@@ -95,10 +95,42 @@
         </div>
       </div> -->
       <div class="md:w-1/2 w-full overflow-hidden">
+        
+            <div class="blob-container hidden md:block">
+              <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                <defs>
+                  <clipPath id="blobClip">
+                    <path
+                      d="M60.9,-17.4C69.1,5.4,59.1,36.5,38.1,51.6C17.1,66.7,-14.9,65.7,-26.6,53.3C-38.2,40.9,-29.5,17.1,-21.6,-5.3C-13.8,-27.7,-6.9,-48.6,9.7,-51.8C26.3,-54.9,52.7,-40.3,60.9,-17.4Z" 
+            transform="translate(100 100)"
+                    />
+                  </clipPath>
+                </defs>
+
+                <!-- Image inside blob -->
+                <image
+                  href="simbi1.jpg"
+                  width="380"
+                  height="320"
+                  clip-path="url(#blobClip)"
+                  preserveAspectRatio="xMidYMid slice"
+                />
+
+                <!-- Optional outline -->
+                <path
+                d="M60.9,-17.4C69.1,5.4,59.1,36.5,38.1,51.6C17.1,66.7,-14.9,65.7,-26.6,53.3C-38.2,40.9,-29.5,17.1,-21.6,-5.3C-13.8,-27.7,-6.9,-48.6,9.7,-51.8C26.3,-54.9,52.7,-40.3,60.9,-17.4Z" 
+            transform="translate(100 100)"
+                  fill="none"
+                  stroke="#c86635"
+                  stroke-width="2"
+                />
+              </svg>
+            </div>
         <div
-          class="image-train-container relative h-[360px] sm:h-[420px] md:h-[480px] overflow-hidden"
+          class="image-train-container relative h-[360px] sm:h-[420px] md:h-[480px] overflow-hidden block md:hidden"
         >
           <div class="image-train-track animate-scrollUp">
+
             <div class="image-train-row flex gap-4 px-2">
               <img
                 src="simbi1.jpg"
@@ -160,8 +192,10 @@
     <main class="flex-1">
       <!-- About Section -->
       <section class="mb-10">
-        <h1 class="text-2xl sm:text-3xl font-bold mb-4">About Me</h1>
-        <p class="text-gray-300 text-sm sm:text-base">
+        <h1 class="text-2xl sm:text-3xl font-bold mb-4 text-[#0f0f0f]">
+          About Me
+        </h1>
+        <p class="text-[#0f0f0f] text-sm sm:text-base">
           I’m SÍMBÍÀTÚÚ, a content marketer, storyteller, full-stack marketer,
           multi-entrepreneur, and business builder based in the UK. I support
           SMEs across various sectors, including health, wellness, tech,
@@ -171,7 +205,7 @@
           life with services that drive growth, build connections, and position
           your brand for long-term success.
         </p>
-        <p class="text-gray-300 mt-4 text-sm sm:text-base">
+        <p class="text-[#0f0f0f] mt-4 text-sm sm:text-base">
           As a single immigrant mom, I’ve built businesses from the ground up
           while navigating challenges, and that resilience shows up in how I
           support clients: with clarity, creativity, and commitment. Every offer
