--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -27,7 +27,7 @@
             <div class="hidden md:block">
               <!-- Button (aligned to the right) -->
               <button
-                class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-md bg-white text-[#e85427] backdrop-blur transition-all hover:bg-[#e35336a0]"
+                class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-md bg-white text-black backdrop-blur transition-all hover:bg-[#9a7aa4]"
                 (click)="send()"
               >
                 <span class="text-sm font-semibold tracking-wide button-text-3"
@@ -91,7 +91,7 @@
           <ng-container *ngTemplateOutlet="navLinks"></ng-container>
 
           <button
-            class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-md bg-white text-[#e85427] backdrop-blur transition-all hover:bg-[#e35336a0]"
+            class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-md bg-white text-[#9a7aa4] backdrop-blur transition-all hover:bg-[#9a7aa4]"
                 (click)="send()"
           >
             <span class="text-sm font-semibold tracking-wide button-text-3"
