--- a/src/app/page/contact/contact.component.html
+++ b/src/app/page/contact/contact.component.html
@@ -54,7 +54,7 @@
   <div class="max-w-6xl w-full grid grid-cols-1 md:grid-cols-2 gap-6">
     
     <!-- Left Side - Contact Information -->
-    <div class="bg-[#0b253a] text-white rounded-lg p-8 shadow-lg relative">
+    <div class="bg-[#9a7aa4] text-white rounded-lg p-8 shadow-lg relative">
       <h2 class="text-2xl font-semibold mb-2">Contact Information</h2>
       <p class="text-gray-300 mb-6">Say something to start a live chat!</p>
 
@@ -119,15 +119,15 @@
           <label class="block text-gray-600 mb-2">Preferred Contact Method?</label>
           <div class="flex flex-wrap gap-4">
             <label class="flex items-center gap-2">
-              <input type="radio" name="subject" formControlName="subject" value="General Inquiry" />
+              <input type="radio" name="subject" formControlName="subject" value="General Inquiry" class="accent-[#9a7aa4]" />
               Email
             </label>
             <label class="flex items-center gap-2">
-              <input type="radio" name="subject" formControlName="subject" value="Support" />
+              <input type="radio" name="subject" formControlName="subject" value="Support" class="accent-[#9a7aa4]" />
               Phone
             </label>
             <label class="flex items-center gap-2">
-              <input type="radio" name="subject" formControlName="subject" value="Feedback" />
+              <input type="radio" name="subject" formControlName="subject" value="Feedback" class="accent-[#9a7aa4]" />
               DM on Instagram
             </label>
           </div>
@@ -139,7 +139,7 @@
 
         <!-- Submit Button -->
         <button type="submit"
-          class="bg-[#0b253a] text-white px-6 py-3 rounded-md hover:bg-[#133553] transition w-full md:w-auto">
+          class="bg-[#9a7aa4] text-white px-6 py-3 rounded-md hover:bg-[#133553] transition w-full md:w-auto">
           Send Message
         </button>
       </form>
