--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@
 }
 
 .button-overlay {
-  background-color: #c86635;
+  background-color: #dec4e6;
   border: 1px #000;
   border-radius: 100%;
   width: 125%;
