--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -140,8 +140,8 @@
               />
             </svg>
             <span
-              >132 Dartmouth Street Boston,<br />Massachusetts 02156 United
-              States</span
+              >
+              192, Walthall street, Crewe,<br />UK CW27LD</span
             >
           </div>
         </div>
