--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -21,8 +21,8 @@
             {{ faq.question }}
           </span>
           <span
-            class="w-6 h-6 flex items-center justify-center rounded-full"
-            [class]="faq.open ? 'bg-orange-400 text-white' : 'bg-black text-white'"
+            class="w-6 h-6 flex items-center justify-center rounded-full pb-1"
+            [class]="faq.open ? 'bg-[#c86635] text-white' : 'bg-black text-white'"
           >
             {{ faq.open ? '−' : '+' }}
           </span>
