--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -121,21 +121,21 @@
 <!-- Navigation Link Template -->
 <ng-template #navLinks>
   <a
-    class="text-white hover:text-[#e85427] px-3 py-2 rounded-md text-sm font-medium"
+    class="text-white hover:text-[#c86635] px-3 py-2 rounded-md text-sm font-medium"
     [routerLink]="['/about']"
     routerLinkActive="active"
   >
     About us
   </a>
   <a
-    class="text-white hover:text-[#e85427] px-3 py-2 rounded-md text-sm font-medium"
+    class="text-white hover:text-[#c86635] px-3 py-2 rounded-md text-sm font-medium"
     [routerLink]="['/blog']"
     routerLinkActive="active"
   >
     Blog
   </a>
   <a
-    class="text-white hover:text-[#e85427] px-3 py-2 rounded-md text-sm font-medium"
+    class="text-white hover:text-[#c86635] px-3 py-2 rounded-md text-sm font-medium"
     [routerLink]="['/service']"
     routerLinkActive="active"
   >
