--- a/src/app/components/streamline/streamline.component.html
+++ b/src/app/components/streamline/streamline.component.html
@@ -12,7 +12,7 @@
 
     <!-- CTA -->
     <button
-      class="mt-6 custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-md bg-black text-white backdrop-blur transition-all hover:bg-[#e35336a0]"
+      class="mt-6 custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-md bg-[#c86635] text-white backdrop-blur transition-all hover:bg-[#e35336a0]"
       (click)="send()"
     >
       <span class="text-sm font-semibold tracking-wide button-text-3"
