--- a/src/app/page/index/index.component.html
+++ b/src/app/page/index/index.component.html
@@ -12,11 +12,11 @@
       <!-- Text Content -->
       <div class="text-center md:text-left md:w-1/2 pt-6 md:pt-0">
         <div
-          class="border border-[#e85427] text-black px-4 py-2 inline-block mb-4 text-sm md:text-base rounded-md"
+          class="border border-[#c86635] text-[#9a7aa4] px-4 py-2 inline-block mb-4 text-sm md:text-base rounded-md"
         >
           Hello there!
         </div>
-        <h1 class="text-3xl md:text-5xl font-bold text-black mb-4">
+        <h1 class="text-3xl md:text-5xl font-bold text-[#9a7aa4] mb-4">
           I'm SÍMBÍÀTÚÚ,
           <p>
             <app-animated-typing
@@ -41,7 +41,7 @@
           class="flex flex-col sm:flex-row justify-center md:justify-start gap-4"
         >
           <button
-            class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-full bg-[#e85427] text-white backdrop-blur transition-all hover:bg-[#e35336a0]"
+            class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-full bg-[#c86635] text-white backdrop-blur transition-all hover:bg-[#e35336a0]"
             [routerLink]="['/about']" routerLinkActive="router-link-active" 
           >
             <span class="text-sm font-semibold tracking-wide button-text-3"
