--- a/src/app/components/testimonials/testimonials.component.html
+++ b/src/app/components/testimonials/testimonials.component.html
@@ -28,7 +28,7 @@
 
           <p class="text-sm text-gray-800 mb-4">"{{ testimonial.quote }}"</p>
 
-          <div class="flex items-center space-x-1 text-yellow-500">
+          <div class="flex items-center justify-center space-x-1 text-[#c86635]">
             @for (star of [1,2,3,4,5]; track star) {
             <svg
               xmlns="http://www.w3.org/2000/svg"
