--- a/src/app/page/about/about.component.html
+++ b/src/app/page/about/about.component.html
@@ -96,38 +96,8 @@
       </div> -->
       <div class="md:w-1/2 w-full overflow-hidden">
         
-            <div class="blob-container hidden md:block">
-              <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                <defs>
-                  <clipPath id="blobClip">
-                    <path
-                      d="M60.9,-17.4C69.1,5.4,59.1,36.5,38.1,51.6C17.1,66.7,-14.9,65.7,-26.6,53.3C-38.2,40.9,-29.5,17.1,-21.6,-5.3C-13.8,-27.7,-6.9,-48.6,9.7,-51.8C26.3,-54.9,52.7,-40.3,60.9,-17.4Z" 
-            transform="translate(100 100)"
-                    />
-                  </clipPath>
-                </defs>
-
-                <!-- Image inside blob -->
-                <image
-                  href="simbi1.jpg"
-                  width="380"
-                  height="320"
-                  clip-path="url(#blobClip)"
-                  preserveAspectRatio="xMidYMid slice"
-                />
-
-                <!-- Optional outline -->
-                <path
-                d="M60.9,-17.4C69.1,5.4,59.1,36.5,38.1,51.6C17.1,66.7,-14.9,65.7,-26.6,53.3C-38.2,40.9,-29.5,17.1,-21.6,-5.3C-13.8,-27.7,-6.9,-48.6,9.7,-51.8C26.3,-54.9,52.7,-40.3,60.9,-17.4Z" 
-            transform="translate(100 100)"
-                  fill="none"
-                  stroke="#c86635"
-                  stroke-width="2"
-                />
-              </svg>
-            </div>
         <div
-          class="image-train-container relative h-[360px] sm:h-[420px] md:h-[480px] overflow-hidden block md:hidden"
+          class="image-train-container relative h-[360px] sm:h-[420px] md:h-[480px] overflow-hidden "
         >
           <div class="image-train-track animate-scrollUp">
 
@@ -135,7 +105,7 @@
               <img
                 src="simbi1.jpg"
                 alt="People meeting"
-                class="w-full object-cover rounded-lg"
+                class="w-full h-full object-cover object-bottom bg-bottom rounded-lg"
               />
             </div>
           </div>
