--- a/src/app/page/about/about.component.html
+++ b/src/app/page/about/about.component.html
@@ -103,9 +103,9 @@
 
             <div class="image-train-row flex gap-4 px-2">
               <img
-                src="simbi1.jpg"
+                src="simbi1.png"
                 alt="People meeting"
-                class="w-full h-full object-cover object-bottom bg-bottom rounded-lg"
+                class="w-full object-center rounded-lg"
               />
             </div>
           </div>
@@ -186,11 +186,11 @@
 
       <!-- Services Section -->
       <section class="mb-10">
-        <h2 class="text-xl sm:text-2xl font-semibold mb-4">What I'm Doing</h2>
+        <h2 class="text-xl sm:text-2xl font-semibold mb-4 text-[#0f0f0f]">What I'm Doing</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-          <div class="bg-[#1e1e1e] p-4 rounded-lg shadow hover:shadow-lg">
-            <h3 class="text-lg font-bold flex items-center gap-2">
-              <i class="fas fa-laptop-code text-yellow-400"></i>
+          <div class="bg-white p-4 rounded-lg shadow hover:shadow-lg">
+            <h3 class="text-lg font-bold flex items-center gap-2 text-[#0f0f0f]">
+              <i class="fas fa-laptop-code text-[#9a7aa4]"></i>
               Affiliate Marketing
             </h3>
             <p class="text-sm text-gray-400 mt-2">
@@ -203,8 +203,8 @@
               scrolling… they’re stopping, engaging, and buying.
             </p>
           </div>
-          <div class="bg-[#1e1e1e] p-4 rounded-lg shadow hover:shadow-lg">
-            <h3 class="text-lg font-bold flex items-center gap-2">
+          <div class="bg-white p-4 rounded-lg shadow hover:shadow-lg">
+            <h3 class="text-lg font-bold flex items-center gap-2 text-[#0f0f0f]">
               <i class="fas fa-code text-yellow-400"></i>
               Portrait Photography/ Personal Branding
             </h3>
@@ -215,8 +215,8 @@
               trust both online and offline.
             </p>
           </div>
-          <div class="bg-[#1e1e1e] p-4 rounded-lg shadow hover:shadow-lg">
-            <h3 class="text-lg font-bold flex items-center gap-2">
+          <div class="bg-white p-4 rounded-lg shadow hover:shadow-lg">
+            <h3 class="text-lg font-bold flex items-center gap-2 text-[#0f0f0f]">
               <i class="fas fa-mobile-alt text-yellow-400"></i>
               ⁠Storytelling Content Creation & Marketing
             </h3>
