--- a/src/app/page/serivce/serivce.component.html
+++ b/src/app/page/serivce/serivce.component.html
@@ -52,43 +52,15 @@
 
       <!-- Image Train (Right) -->
       <div class="md:w-1/2 w-full overflow-hidden">
-        <div class="blob-container hidden md:block">
-          <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-            <defs>
-              <clipPath id="blobClip">
-                <path
-                  d="M53,-22C63.6,-12.2,63.6,12.3,53,21.8C42.4,31.4,21.2,26.1,1.8,25.1C-17.5,24,-35.1,27.2,-44.2,18.5C-53.3,9.7,-53.9,-10.9,-45.2,-19.6C-36.4,-28.2,-18.2,-25,1.5,-25.8C21.2,-26.7,42.4,-31.7,53,-22Z" transform="translate(100 100)"
-                />
-              </clipPath>
-            </defs>
-
-            <!-- Image inside blob -->
-            <image
-              href="madam.jpg"
-              width="150"
-              height="600"
-              clip-path="url(#blobClip)"
-              preserveAspectRatio="xMidYMid slice"
-            />
-
-            <!-- Optional outline -->
-            <path
-              d="M53,-22C63.6,-12.2,63.6,12.3,53,21.8C42.4,31.4,21.2,26.1,1.8,25.1C-17.5,24,-35.1,27.2,-44.2,18.5C-53.3,9.7,-53.9,-10.9,-45.2,-19.6C-36.4,-28.2,-18.2,-25,1.5,-25.8C21.2,-26.7,42.4,-31.7,53,-22Z" transform="translate(100 100)"
-              fill="none"
-              stroke="#c86635"
-              stroke-width="2"
-            />
-          </svg>
-        </div>
         <div
-          class="image-train-container relative h-[360px] sm:h-[420px] md:h-[480px] overflow-hidden block md:hidden"
+          class="image-train-container relative h-[360px] sm:h-[420px] md:h-[480px] overflow-hidden"
         >
           <div class="image-train-track animate-scrollUp">
             <div class="image-train-row flex gap-4 px-2">
               <img
                 src="madam.jpg"
                 alt="People meeting"
-                class="w-full object-cover rounded-lg"
+                class="w-full object-center rounded-lg"
               />
             </div>
           </div>
